Updating my information about me. Added my photo.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,6 +5,10 @@ body {
     background-size: cover;
     -o-background-size: cover;
   }
+#imgsize {
+  width: 200px;
+  height: 200px;
+}
   .fa {
     padding: 10px;
     font-size: 30px;
